Add resilience patterns

--- a/OrderProcessing.Api/appsettings.json
+++ b/OrderProcessing.Api/appsettings.json
@@ -2,8 +2,50 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ExternalServices": {
+    "InventoryService": {
+      "BaseUrl": "https://api.inventory.example.com",
+      "TimeoutSeconds": 5
+    },
+    "PaymentService": {
+      "BaseUrl": "https://api.payments.example.com",
+      "TimeoutSeconds": 10
+    },
+    "ShippingService": {
+      "BaseUrl": "https://api.shipping.example.com",
+      "TimeoutSeconds": 8
+    }
+  },
+  "Resilience": {
+    "RetryPolicy": {
+      "MaxRetries": 3,
+      "BaseDelayMs": 1000,
+      "MaxDelayMs": 10000,
+      "BackoffMultiplier": 2.0,
+      "Jitter": 0.1
+    },
+    "CircuitBreaker": {
+      "FailureThreshold": 3,
+      "SamplingDurationMs": 10000,
+      "MinimumThroughput": 3,
+      "BreakDurationMs": 30000
+    },
+    "Timeout": {
+      "DefaultTimeoutMs": 5000,
+      "InventoryTimeoutMs": 5000,
+      "PaymentTimeoutMs": 10000,
+      "ShippingTimeoutMs": 8000
+    },
+    "Bulkhead": {
+      "MaxConcurrentInventory": 10,
+      "MaxConcurrentPayment": 5,
+      "MaxConcurrentShipping": 8,
+      "MaxQueueLength": 25
+    }
+  }
 }
