--- a/OrderProcessing.Services/OrderProcessing.Services.csproj
+++ b/OrderProcessing.Services/OrderProcessing.Services.csproj
@@ -1,10 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="9.0.8" />
+	<PackageReference Include="Polly" Version="8.2.0" />
+	<PackageReference Include="Polly.Core" Version="8.2.0" />
+	<PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="8.0.0" />
+	<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.8" />
+	<PackageReference Include="Microsoft.Extensions.Http" Version="9.0.8" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\OrderProcessing.Core\OrderProcessing.Core.csproj" />
