--- a/OrderProcessing.Api/appsettings.json
+++ b/OrderProcessing.Api/appsettings.json
@@ -3,7 +3,8 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
-      "Microsoft.EntityFrameworkCore": "Information"
+      "Microsoft.EntityFrameworkCore": "Information",
+      "OrderProcessing.Api.Services.SignalRLoggingService": "Information"
     }
   },
   "AllowedHosts": "*",
@@ -47,5 +48,9 @@
       "MaxConcurrentShipping": 8,
       "MaxQueueLength": 25
     }
-  }
+  },
+  "LoggingApi": {
+    "BaseUrl": "https://localhost:7002"
+  }//,
+  //"Urls": "https://localhost:7001;http://localhost:7000"
 }
