--- a/OrderProcessing.Api/OrderProcessing.Api.csproj
+++ b/OrderProcessing.Api/OrderProcessing.Api.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
 	  <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.0" />
+	  <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="9.0.8" />
 	  <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
 	  <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
 	  <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
