--- a/OrderProcessing.Api/appsettings.Development.json
+++ b/OrderProcessing.Api/appsettings.Development.json
@@ -2,7 +2,11 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "OrderProcessing.Api.Services.SignalRLoggingService": "Information"
     }
+  },
+  "LoggingApi": {
+    "BaseUrl": "https://localhost:7002"
   }
 }
