--- a/MockInventoryService.Api/MockInventoryService.Api.csproj
+++ b/MockInventoryService.Api/MockInventoryService.Api.csproj
@@ -9,14 +9,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
-    <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="10.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\OrderProcessing.Core\OrderProcessing.Core.csproj" />
     <ProjectReference Include="..\ResilienceOrderProcessing.ServiceDefaults\ResilienceOrderProcessing.ServiceDefaults.csproj" />
   </ItemGroup>
 
