--- a/ResilienceOrderProcessing.AppHost/ResilienceOrderProcessing.AppHost.csproj
+++ b/ResilienceOrderProcessing.AppHost/ResilienceOrderProcessing.AppHost.csproj
@@ -1,10 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Sdk Name="Aspire.AppHost.Sdk" Version="9.2.1" />
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <UserSecretsId>ff6ebe32-015d-4a43-abcb-057f9c65024a</UserSecretsId>
